@startuml
'https://plantuml.com/class-diagram

interface Voltage5V
class Voltage220V
class VoltageAdapter
class Phone
class Client

class Voltage220V{
 void output220V()
}

interface Voltage5V{
 void output5V()
}

class Client{
}

class VoltageAdapter{
Voltage220V voltage220
VoltageAdapter(Voltage220V:voltage220)
}

class Phone{
void charging(Voltage5V:voltage5v)
}

VoltageAdapter o-- Voltage220V

VoltageAdapter ..|> Voltage5V

Phone ..> Voltage5V

Client ..> Phone

Client ..> VoltageAdapter

Client ..> Voltage220V
@enduml